# spinwin

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  fly.staging.toml  fly.toml
.github/workflows/: fly-deploy.yml
core/: Cargo.toml
core/src/: lib.rs
scanner-wasm/: Cargo.toml
scanner-wasm/src/: lib.rs
server/: Cargo.toml
server/frontend/: admin.css  admin.html  admin.js  app.js  index.html  scan.css  scan.html  scan.js  styles.css
server/src/: main.rs
tests/: TEST_PLAN.md  api_integration_test.sh  core_crypto_test.sh  mystery_prize_test.sh  prize_alignment_test.sh  run_all.sh  stress_test.sh  tunnel.sh
tests/windows/: api_integration_test.bat  api_integration_test.py  core_crypto_test.bat  mystery_prize_test.bat  mystery_prize_test.py  prize_alignment_test.bat  prize_alignment_test.py  run_all.bat  stress_test.bat  stress_test.py
