[package]
name = "spinwin-server"
version = "0.1.0"
edition = "2021"

[dependencies]
spinwin-core = { path = "../core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
rand = "0.8"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
