[package]
name = "spinwin-server"
version = "0.1.0"
edition = "2021"

[dependencies]
spinwin-core = { path = "../core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
rand = "0.8"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
csv = "1"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
qrcode = "0.14"
image = "0.25"
